--- a/WebCore/Areas/Identity/Pages/Account/Login.cshtml
+++ b/WebCore/Areas/Identity/Pages/Account/Login.cshtml
@@ -10,20 +10,16 @@
     <div class="col-md-4">
         <section>
             <form method="post">
-                <h4>Use a local account to log in.</h4>
-                <h4>Use a local account to log in.</h4>
-                <h1>UserEmail : johndoe@email.com</h1>
-                <h1>UserPassword : #skdlf12W</h1>
                 <hr />
                 <div asp-validation-summary="All" class="text-danger"></div>
                 <div class="form-group">
                     <label asp-for="Input.Email"></label>
-                    <input asp-for="Input.Email" class="form-control" />
+                    <input asp-for="Input.Email" class="form-control" value="johndoe@email.com" />
                     <span asp-validation-for="Input.Email" class="text-danger"></span>
                 </div>
                 <div class="form-group">
                     <label asp-for="Input.Password"></label>
-                    <input asp-for="Input.Password" class="form-control" />
+                    <input asp-for="Input.Password" class="form-control" value="#skdlf12W" />
                     <span asp-validation-for="Input.Password" class="text-danger"></span>
                 </div>
                 <div class="form-group">
