--- a/WebCore/Views/Shared/_Layout.cshtml
+++ b/WebCore/Views/Shared/_Layout.cshtml
@@ -6,6 +6,16 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>@ViewData["Title"] - WebCore</title>
+    <link href="~/lib/jqwidgets/styles/jqx.base.css" rel="stylesheet" />
+    <link href="~/lib/jqwidgets/styles/jqx.metro.css" rel="stylesheet" />
+    <link href="~/lib/jqwidgets/styles/jqx.bootstrap.css" rel="stylesheet" />
+    <script src="~/lib/jquery/dist/jquery.js" asp-append-version="true"></script>
+    <script src="~/lib/jqwidgets/jqx-all.js" asp-append-version="true"></script>
+    <script src="~/lib/jqwidgets/jqxdata.js" asp-append-version="true"></script>
+    <script src="~/lib/jqwidgets/jqxdata.export.js" asp-append-version="true"></script>
+    <script src="~/lib/bootstrap/dist/js/bootstrap.js" asp-append-version="true"></script>
+    <script src="~/lib/jquery-unobtrusive/jquery.unobtrusive-ajax.js" asp-append-version="true"></script>
+    <script src="~/js/site.js" asp-append-version="true"></script>
 
     <environment include="Development">
         <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.css" />
