--- a/WebCore/Views/_ViewImports.cshtml
+++ b/WebCore/Views/_ViewImports.cshtml
@@ -1,3 +1,7 @@
 ﻿@using WebCore
 @using WebCore.Models
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
+
+@using jQWidgets.AspNetCore.Mvc.TagHelpers
+@addTagHelper *, jQWidgets.AspNetCore.Mvc.TagHelpers
+@addTagHelper *, jQWidgets.AspNetCore.Mvc.Bootstrap.TagHelpers
